--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
+    "parcel": "^2.8.3"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
-    "parcel": "^2.8.3"
-  }
+    "popper": "^1.0.1"
+  },
+  "name": "3",
+  "version": "1.0.0",
+  "default": "./src/index.html",
+  "scripts": {
+    "test": "mocha",
+    "dev": "parcel src/index.html",
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
