--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "handlebars": "^4.7.7",
     "jquery": "^3.6.4",
     "popper": "^1.0.1"
   },
