--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "parcel": "^2.8.3",
+    "parcel-transformer-handlebars": "^1.0.0",
     "parcel-transformer-hbs": "^1.0.4"
   },
   "dependencies": {
