--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "handlebars": "^4.7.7",
-    "jquery": "^3.6.4",
+    "jquery": "^3.7.0",
     "popper": "^1.0.1"
   },
   "name": "3",
   "version": "1.0.0",
   "default": "./src/index.html",
+  "source": "./src/index.html",
   "scripts": {
     "test": "mocha",
     "dev": "parcel src/index.html",
